# TSP_TP3_Python

./: main.py  pyproject.toml  readme.md
test/: test.py  testwithPytest.py  testwithUnitTest.py
tsp/: solver.py
